# chroma

./: .clang-format  .gitignore  CMakeLists.txt  configure.ac
docs/: superb_tasks.md
lib/: CMakeLists.txt  Makefile.am  chroma_config_internal.h.cmake.in
lib/actions/ferm/invert/quda_solvers/: enum_quda_io.cc  quda_eig_params.cc  quda_eig_params.h  quda_mg_utils.h  syssolver_quda_clover_params.h  xml_array_utils.h
lib/init/: chroma_init.cc
lib/meas/inline/hadron/: inline_baryon_matelem_colorvec_superb_w.cc  inline_baryon_matelem_colorvec_superb_w.h  inline_disco_prob_3d_defl_superb_w.cc  inline_disco_prob_3d_defl_superb_w.h  inline_inverter_test_superb_w.cc  inline_inverter_test_superb_w.h  inline_meson_matelem_colorvec_superb_w.cc  inline_meson_matelem_colorvec_superb_w.h  inline_prop_and_matelem_distillation_superb_w.cc
lib/util/ferm/: chroma_superlu_dist_wrapper.h  mgproton.cc  superb_contractions.h
mainprogs/main/: Makefile.am
mainprogs/tests/: Makefile.am  t_mg_params.cc
src/anarchofs/: LICENSE  Makefile  README.md  anarchofs.cc  anarchofs_lib.h  test_daemonless.cc  test_socket.cc
src/chroma/docs/notes/: smd_design.tex
src/chroma/lib/: Makefile.am
src/chroma/lib/actions/ferm/invert/quda_solvers/: enum_quda_io.cc  enum_quda_io.h  quda_eig_params.cc  quda_mg_utils.h  quda_multigrid_params.cc  quda_multigrid_params.h
src/chroma/lib/actions/ferm/linop/: clover_term_jit_w.h
src/chroma/lib/meas/inline/hadron/: inline_baryon_matelem_colorvec_superb_w.cc  inline_disco_prob_3d_defl_superb_w.cc  inline_disco_prob_3d_defl_superb_w.h  inline_prop_and_matelem_distillation_superb_w.cc  inline_prop_and_matelem_distillation_superb_w.h
src/chroma/lib/update/molecdyn/hamiltonian/: abs_hamiltonian.h  exact_hamiltonian.h
src/chroma/lib/update/molecdyn/monomial/: abs_monomial.h  one_flavor_rat_monomial5d_w.h  one_flavor_rat_monomial_w.h  one_flavor_ratio_rat_conv_monomial5d_w.h  one_flavor_ratio_rat_conv_monomial_w.h  one_flavor_ratio_rat_rat_monomial5d_w.h  one_flavor_ratio_rat_rat_monomial_w.h  two_flavor_monomial5d_w.h  two_flavor_monomial_w.h  two_flavor_multihasen_cancel_monomial_w.h  two_flavor_polynomial_monomial_w.h  two_flavor_polyprec_monomial_w.h  two_flavor_ratio_conv_conv_monomial5d_w.h  two_flavor_ratio_conv_conv_monomial_w.h  two_flavor_ratio_conv_conv_multihasen_monomial_w.h  two_flavor_ratio_conv_rat_monomial5d_w.h  two_flavor_ratio_conv_rat_monomial_w.h
src/chroma/lib/update/molecdyn/smd/: lcm_smd.h  smd.h
src/chroma/lib/util/ferm/: mgproton.cc
src/chroma/mainprogs/main/: CMakeLists.txt  Makefile.am  compare_gauge.cc  smd.cc
src/chroma/mainprogs/tests/: CMakeLists.txt  mgparams_tests.cc  mgparams_tests.h
src/chroma/other_libs/qdp-lapack/: .gitignore  CMakeLists.txt  Config.cmake.in
src/chroma/other_libs/qdp-lapack/include/: qdp-lapack_config_internal.h.cmake.in  qdp-lapack_wtime.h
src/chroma/other_libs/qdp-lapack/lib/: CMakeLists.txt  IncrEigbicg.c  IncrEigpcg.c  IncrEigpcg_orthogonalize.c  wtime.c
src/chroma/other_libs/wilsonmg/: .gitignore
src/chroma/tests/smd/: smd.prec_wilson.ini.xml  smd.seoprec_clover_multihasenbusch.ini.xml
src/qdpxx/: configure.ac  configure~
src/qdpxx/include/: qdp_default_allocator.h
src/qdpxx/lib/: qdp_subset.cc
src/qdpxx/other_libs/libintrin/: configure~
src/qdpxx/other_libs/qio/: configure~
src/qdpxx/other_libs/qio/other_libs/c-lime/: configure~
src/qmp/: Makefile.in  aclocal.m4  configure
src/qmp/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
src/qmp/doc/: Makefile.in
src/qmp/examples/: Makefile.in
src/qmp/include/: Makefile.in
src/qmp/lib/: Makefile.in
src/superbblas/: .clang-format  LICENSE  Makefile  make.inc
src/superbblas/docs/doxygen/: Doxyfile-prj.cfg
src/superbblas/docs/sphinx/: Makefile
src/superbblas/docs/sphinx/source/: conf.py  index.rst
src/superbblas/include/: superbblas.h
src/superbblas/include/superbblas/: alloc.h  blas.h  blas_cpu_tmpl.hpp  bsr.h  cache.h  cblas.h  copy_n.h  crc32.h  dense.h  dist.h  performance.h  platform.h  runtime_features.h  storage.h  superbblas_lib.h  template.h  template_types.h  template_undef.h  tenfucks_cpu.h  tenfucks_gpu.h  tensor.h  version.h
src/superbblas/src/: Makefile
src/superbblas/src/tools/: ctemplate
src/superbblas/tests/: Makefile  blas.cpp  bsr.cpp  bsr_hist.cpp  contract.cpp  dense.cpp  dist.cpp  local.cpp  storage.cpp  storage_details.cpp  tenfucks.cpp
tests/chroma/hadron/propagator/: unprec_clover-quda-defl.ini.xml
